--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
-
   "dependencies": {
     "@huggingface/inference": "^4.13.3",
+    "@huggingface/transformers": "^3.8.0",
     "@xenova/transformers": "^2.17.2",
     "compromise": "^14.14.4",
     "fast-levenshtein": "^3.0.0",
