--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fast-levenshtein": "^3.0.0",
+    "leo-profanity": "^1.8.0",
     "node-fetch": "^3.3.2",
     "string-similarity": "^4.0.4",
     "synonyms": "^1.0.1"
